[package]
name = "astro-plotter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { version = "*", default_features = false, features = ["bitmap_backend", "bitmap_encoder", "point_series"] }
astro-rs = { version = "*", git = "https://github.com/eta077/astro-rs", branch = "image-feature", optional = true }
fitrs = { version = "*", optional = true }
fitsio = { version = "*", optional = true }
fits-rs = { version = "*", optional = true }
rubbl_fits = { version = "*", optional = true }
rustronomy-fits = { version = "*", optional = true }
